# V-Executive-Search

./: .env.example  .gitignore  DEPLOY.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
Playwright/: .env.example  .gitignore  README.md  pyproject.toml
Playwright/scripts/: contactout_dashboard_sync.py  contactout_keepalive.py  contactout_login.py  contactout_store_credentials.py  install_launchd.sh  setup.sh  test_cross_match.py
Playwright/src/: contact_phones.py  contactout_alerts.py  contactout_keychain.py  credit_guardian.py  human_behavior.py  linkedin_match.py  navigation.py  project_root.py  rate_limit.py  resend_notify.py  stealth_browser.py
worker/: .env.example  .gitignore  README.md  pyproject.toml
worker/config/: searches.yaml
worker/launchd/: com.vexecsearch.daily.plist  com.vexecsearch.poll.plist
worker/scripts/: backfill_linkedin_posters.py  bootstrap_release.sh  check_imessage.py  check_presence.py  contactout_dashboard_sync.py  contactout_login.py  contactout_store_credentials.py  fetch_contacts.js  health_check.py  import_jobs_csv.py  install_launchd.sh  measure_scrape_ground_truth.py  outreach_imap_login.py  outreach_pump.py  poll_and_run.py  rotate_logs.sh  run_daily.py  save_contact.js  scrape_location.py  send_test_email.py  setup_mac.sh  test_contactout_email.py  test_contactout_hybrid.py  verify_release_launchd.sh
worker/src/: __init__.py  caffeinate_guard.py  coarse_sector.py  config_loader.py  contact_phones.py  contactout_otp.py  credit_alert.py  crm_client.py  crm_config.py  (+20 more)
(+345 files in other folders)
