[project]
name = "v-execsearch-playwright"
version = "0.1.0"
description = "Archived ContactOut dashboard automation (stealth Playwright) — NOT wired to production worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "patchright>=0.5.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
camoufox = ["camoufox[geoip]>=0.4.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
