[project]
name = "vexecsearch-worker"
version = "0.1.0"
description = "Daily job listing scraper and contact enrichment pipeline"
requires-python = ">=3.10"
dependencies = [
    "python-jobspy>=1.1.80",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "msal>=1.28.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
run-daily = "scripts.run_daily:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
